--- a/main.css
+++ b/main.css
@@ -7,3 +7,8 @@ article{
   margin-left:15%;
   padding: 1rem;
 }
+.flexContainer{
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
